# firststep-demo

./: .gitmodules  CMakeLists.txt  run-mingw.sh  run-unix.sh
src/java/bellmodel/: MatPoint.java  ModelCalc.java  ModelData.java
src/java/firststep/demo/: ArcAnimation.java  ArcAnimator.java  DemoWindow.java  LineAnimation.java  LineAnimator.java  LogoAnimation.java  LogoController.java  LogoView.java  RoundRectAnimation.java
src/java/firststep/demo/base/: Animation.java  AnimationsGroup.java  Animator.java  AnimatorsManager.java
src/native/: bell-model.cpp  bell-model.h  jni_MatPoint.cpp  jni_ModelCalc.cpp  jni_ModelData.cpp
